Update refinery-glass version of new user form
 - copied from feast

--- a/app/views/refinery/admin/users/_form.html.erb
+++ b/app/views/refinery/admin/users/_form.html.erb
@@ -1,30 +1,44 @@
-<%= form_for [refinery, :admin, @user] do |f| %>
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 margin-bottom-xs">
+    <h2 class="admin-title hide-in-modal"><%= @user.id.present? ? "#{@user.username}'s Profile" : 'Add A New Admin' %></h2>
+
+<%
+  html_options = {
+    :class => 'ajax-form admin-form',
+    :'data-ajax-replace-selector' => '.admin-form',
+    :'data-item-id' => @user.id
+  }
+%>
+<%= form_for [refinery, :admin, @user], html: html_options do |f| %>
 
   <%= render '/refinery/admin/error_messages',
              :object => @user,
              :include_object_name => true %>
 
-  <div class='field'>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+  <div class='form-group'>
+    <%= f.label :username, "Username for login" %>
+    <%= f.text_field :username, :placeholder => 'Username', :class => 'form-control input-lg' %>
   </div>
-  <div class='field'>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+
+  <div class='form-group'>
+    <%= f.text_field :email, :class => 'form-control input-lg', :placeholder => 'Email' %>
   </div>
-  <div class='field'>
-    <%= f.label :password %>
-    <%= f.password_field :password, :autocomplete => 'off' %>
-    <% if @user.persisted? %>
-      <br>
-      <%= content_tag(:span, t('.blank_password_keeps_current')) %>
-    <% end %>
-  </div>
-  <div class='field'>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, :autocomplete => 'off' %>
-  </div>
-  <div class='field plugin_access'>
+  <% if @edit_user.present? %>
+    <div class='form-group'>
+      <%= f.label :password %>
+      <%= f.password_field :password, :autocomplete => 'off', :class => 'form-control input-lg' %>
+      <% if @user.persisted? %>
+        <br>
+        <%= content_tag(:span, t('.blank_password_keeps_current')) %>
+      <% end %>
+    </div>
+
+    <div class='form-group'>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, :autocomplete => 'off', :class => 'form-control input-lg' %>
+    </div>
+  <% end %>
+  <div class='form-group plugin_access' style="<%= current_refinery_user.has_role?(:superuser) ? '' : 'display: none;' %>"> 
     <span class='label_with_help'>
       <%= f.label :plugin_access, t('.plugin_access'), :class => "title_label" %>
       <%= link_to "(#{t('.enable_all')})", "", :id => "user_plugins_enable_all" %>
@@ -51,7 +65,7 @@
   </div>
 
   <% if current_refinery_user.has_role?(:superuser) && Refinery::Authentication.superuser_can_assign_roles %>
-    <div class='field role_access'>
+    <div class='form-group role_access'>
       <span class='label_with_help'>
         <%= f.label :role_access, t('.role_access'), :class => "title_label" %>
       </span>
@@ -70,15 +84,21 @@
       </ul>
     </div>
   <% end %>
-
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
+             :submit_button_text => @submit_button_text ||= 'Send Invitation',
              :hide_delete => !current_refinery_user.can_delete?(@user),
              :delete_title => t('delete', :scope => 'refinery.admin.users'),
              :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @user.username) %>
 <% end %>
 
+  </div>
+</div>
+
+<%= render 'refinery/admin/users/submenu' %>
+
 <% content_for :javascripts do %>
+  <!--
   <script>
     $(document).ready(function() {
       $('#user_plugins_enable_all').click(function(e, a) {
@@ -87,5 +107,5 @@
       });
     });
   </script>
+  -->
 <% end %>
-<%= render 'refinery/admin/users/submenu' %>
