Click pads & scroll to new element

--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -21,7 +21,9 @@
   <button class="circle-icon delete-module glass-control append" contenteditable=false><i class="gcicon gcicon-trash"></i></button>
   <div class="click-pads glass-control append" contenteditable=false>
     <div class="click-pad top"></div>
+    <div class="click-pad right"></div>
     <div class="click-pad bottom"></div>
+    <div class="click-pad left"></div>
   </div>
 
   <div id="glass-module-vid-template" class="video-wrapper glass-no-edit" contenteditable=false>
