--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -88,15 +88,33 @@
   left: 0;
   right: 0;
   .click-pad {
-    width: 100%;
-    height: 20px;
     cursor: text;
     position: absolute;
+
+    &.bottom, &.top {
+      left: 0;
+      right: 0;
+    }
     &.top {
+      height: 20px;
       top: -20px;
     }
     &.bottom {
+      height: 20px;
       bottom: -20px;
+    }
+
+    &.left, &.right {
+      top: 0;
+      bottom: 0;
+    }
+    &.left {
+      left: -100px;
+      width: 100px;
+    }
+    &.right {
+      right: -100px;
+      width: 100px;
     }
   }
 }
