Glass editor - Edit a link

--- a/app/assets/stylesheets/glass/partials/components/_grande-menu.scss
+++ b/app/assets/stylesheets/glass/partials/components/_grande-menu.scss
@@ -89,12 +89,12 @@
       color: $primary-dark;
     }
   }
-  .header1{
+  .header1, .header2{
     sub{
       bottom: -0.15em;
     }
   }
-  .header2{
+  .header3{
     .gcicon{
       font-size: 12px;
     }
