Placeholder for first p in contenteditable div only

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -15,10 +15,12 @@
   }
 }
 
+/*
 [contenteditable=true] p.empty:before{
   content: 'New paragraph...';
   position: absolute;
 }
+*/
 
 [contenteditable=true] p.empty{
   min-height: 18px;
