--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -809,6 +809,10 @@ ul li{
   overflow-y: scroll;
 }
 
+.ellipsis{
+  @include ellipsis(100%);
+}
+
 
 /* -------------------- FORMS -------------------- */
 
