First <p> gets a placeholder, and can tab to it

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -15,6 +15,11 @@
   }
 }
 
+[contenteditable=true] p.empty:first-of-type:before{
+  content: 'New paragraph...';
+  position: absolute;
+}
+
 [contenteditable=true] p.empty{
   min-height: 18px;
   z-index: 0;
