Glass editor - inserting, scrolling cursor
 - Correctly insert <p> before & after elements
 - auto scroll to element if off screen on focus
 - cursor text for placeholders

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -3,10 +3,11 @@
 [contenteditable=true]:empty,
 [contenteditable=true] .empty{
   &:before{
-  content: attr(glass-placeholder);
-  display: block; /* For Firefox */
-  color: $grey-5;
-  transition: .15s ease-out;
+    content: attr(glass-placeholder);
+    display: block; /* For Firefox */
+    color: $grey-5;
+    transition: .15s ease-out;
+    cursor: text;
   }
   &:focus{
     &:before{
