--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -3,6 +3,20 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="admin-title">Pages</h2>
+      <div class="mini-lesson">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2">
+            <div class="portrait">
+              <img class="img-circle" src="http://glasscanvas.s3.amazonaws.com/elephant/elephant-portrait.jpg"/>
+            </div>
+            <div class="message-right">
+              <p>
+                Hey there, don't forget to add content to the pages of your site! You can add &ldquo;child&rdquo; pages under your about page. For example you may want to create <b>Who We Are</b>, <b>What We Do</b>, or <b>What We Believe</b> pages.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="contextual-menu">
         <div class="contextual-options">
           <button class="btn btn-link-grey btn-anchor" data-url="<%= refinery.new_admin_page_path %>">
