--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -3,13 +3,14 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="admin-title">Pages</h2>
-      <div class="mini-lesson">
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="mini-lesson">
             <div class="portrait">
               <img class="img-circle" src="http://glasscanvas.s3.amazonaws.com/elephant/elephant-portrait.jpg"/>
             </div>
-            <div class="message-right">
+            <div class="message message-right">
+              <button class="close hidden"><i class="gcicon gcicon-close"></i></button>
               <p>
                 Hey there, don't forget to add content to the pages of your site! You can add &ldquo;child&rdquo; pages under your about page. For example you may want to create <b>Who We Are</b>, <b>What We Do</b>, or <b>What We Believe</b> pages.
               </p>
