--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -416,7 +416,8 @@ p::-moz-selection {
 .video-wrapper{
 	padding-bottom: 56.25%;
 	height: 0;
-	margin-bottom: 60px;
+	margin-top: 45px;
+	margin-bottom: 45px;
 }
 
 .video-wrapper iframe{
@@ -430,7 +431,8 @@ p::-moz-selection {
 .video-16-9{
 	padding-bottom: 56.25%;
 	height: 0;
-	margin-bottom: 60px;
+	margin-top: 45px;
+	margin-bottom: 45px;
 }
 
 .video-16-9 iframe{
@@ -444,7 +446,8 @@ p::-moz-selection {
 .video-ws{
 	padding-bottom: 42.18%;
 	height: 0;
-	margin-bottom: 60px;
+	margin-top: 45px;
+	margin-bottom: 45px;
 }
 
 .video-ws iframe{
@@ -595,6 +598,31 @@ a.pill{
         top: 50%;
         margin-top: -30px;
       }
+    }
+  }
+}
+
+.message{
+  background: $white;
+  border-radius: $radius;
+  padding: 30px;
+  p{
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &-right{
+    &:before{
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: -10px;
+      margin-top: -10px;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent $white transparent transparent;
     }
   }
 }
