--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -11,23 +11,22 @@
             </div>
             <div class="message message-right">
               <button class="close hidden"><i class="gcicon gcicon-close"></i></button>
-              <p>
-                Hey there, don't forget to add content to the pages of your site! You can add &ldquo;child&rdquo; pages under your about page. For example you may want to create <b>Who We Are</b>, <b>What We Do</b>, or <b>What We Believe</b> pages.
-              </p>
+              <p>Howdy! How are ya feeling about the new site? You’re doing great!</p>
+              <p>By the way, please don’t forget to add content into your site’s pages. These are pages that tell your readers a little more about you. If you would like, you can add a &ldquo;child page&rdquo; under your About page. An example of a child page would be: <b>Who We Are</b>, <b>What We Do</b>, or <b>What We Believe</b> pages.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="contextual-menu">
-        <div class="contextual-options">
-          <button class="btn btn-link-grey btn-anchor" data-url="<%= refinery.new_admin_page_path %>">
-            <i class="gcicon gcicon-add"></i> <strong>Add page</strong>
-          </button>
+        <div class="contextual-options space-between">
           <button id='reorder_action' class="btn btn-link-grey">
             <i class="gcicon gcicon-reorder bump-down"></i> <strong>Reorder</strong>
           </button>
           <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
             <i class="gcicon gcicon-reorder"></i> <strong>Done</strong>
+          </button>
+          <button class="btn btn-primary btn-anchor" data-url="<%= refinery.new_admin_page_path %>">
+            <i class="gcicon gcicon-add"></i> <strong>New page</strong>
           </button>
         </div>
       </div>
