--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -139,6 +139,10 @@ button{
   justify-content: space-around;
 }
 
+.space-between{
+  justify-content: space-between;
+}
+
 .block{
   display: block;
 }
