Updating pages - title, slug, view templates
 - Sync-up the page title between body & sidebar
 - generate page slug
 - No view template (except superuser or config says so)

--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -227,7 +227,7 @@ body{
           outline: none;
         }
         &:empty{
-          width: 15px;
+          /* width: 15px; */
           border-color: $primary-dark;
         }
       }
