--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -620,6 +620,17 @@ a.pill{
   }
 }
 
+.image-row{
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+.caption-lg{
+  font-size: 21px;
+  font-weight: 600;
+  margin-top: 15px;
+}
+
 .message{
   background: $white;
   border-radius: $radius;
