--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -289,6 +289,14 @@ p::-moz-selection {
   border: none !important;
 }
 
+.border-radius{
+  border-radius: $radius;
+}
+
+.border-radius-double{
+  border-radius: $radius-double;
+}
+
 
 
 /* -------------------- ELEMENTS -------------------- */
