--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -644,7 +644,7 @@ a.pill{
   border-radius: $radius;
   padding: 30px;
   p{
-    &:last-child{
+    &:last-of-type{
       margin-bottom: 0;
     }
   }
