--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -644,8 +644,8 @@ a.pill{
   border-radius: $radius;
   padding: 30px;
   p{
-    &:last-of-type{
-      margin-bottom: 0;
+    &:last-child{
+      margin-bottom: 0 !important;
     }
   }
   &-right{
