--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -71,6 +71,11 @@
     font-size: 21px;
     line-height: 1.8em;
   }
+  .message{
+    p{
+      font-size: 18px;
+    }
+  }
   ul{
     text-align: left;
     font-size: 21px;
