--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -629,14 +629,15 @@ a.pill{
 }
 
 .image-row{
-  margin-top: 45px;
-  margin-bottom: 45px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .caption-lg{
   font-size: 21px;
   font-weight: 600;
   margin-top: 15px;
+  color: $grey-5;
 }
 
 .message{
