--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -49,14 +49,18 @@
       box-shadow: none;
       font-weight: 600;
       .gcicon-check{
-        display: inline;
-        color: $grey-4;
+        display: none;
       }
       &:hover{
         color: $primary-hover;
         .gcicon{
           color: $primary-hover;
         }
+      }
+    }
+    &.completed-step.active{
+      .gcicon-check{
+        display: inline;
       }
     }
   }
