--- a/app/views/refinery/admin/users/_user.html.erb
+++ b/app/views/refinery/admin/users/_user.html.erb
@@ -13,13 +13,15 @@
     </a>
     <span class='actions actions-col-2'>
       <span class="delete">
-        <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.admin_user_path(user),
-          :class => "cancel confirm-delete circle-icon",
-          :title => t('.delete'),
-          :confirm => t('message', :scope => 'refinery.admin.delete', :title => user.username),
-          :method => :delete if current_refinery_user.can_delete?(user) %>
+        <%= render 'refinery/admin/glass/delete_button',
+                   css_class: 'cancel confirm-delete circle-icon',
+                   delete_url: refinery.admin_user_path(user),
+                   after_delete_url: refinery.admin_users_path,
+                   confirm_text: 'Are you sure you want to delete this User?',
+                   delete_btn_text: '<i class="gcicon gcicon-trash"></i>'
+        -%>
       </span>
-    
+
       <span class="edit">
         <%= link_to '<i class="gcicon gcicon-edit"></i>'.html_safe, refinery.edit_admin_user_path(user),
            :class => "circle-icon",
