--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -45,22 +45,24 @@ html
     <%#= render '/glass/alerts_status' %>
     <%= render 'refinery/admin/custom_layout' %>
 
-    <section id="sidebar-left" class="ui sidebar left overlay">
-      <div class="sidebar-top-nav">
-        <div class="site-name">
-          <% if content_for?(:custom_sidebar_header_link) %>
-            <%= yield :custom_sidebar_header_link %>
-          <% else %>
-            <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
-          <% end %>
+    <% if !defined?(@hide_main_nav) || !@hide_main_nav %>
+      <section id="sidebar-left" class="ui sidebar left overlay">
+        <div class="sidebar-top-nav">
+          <div class="site-name">
+            <% if content_for?(:custom_sidebar_header_link) %>
+              <%= yield :custom_sidebar_header_link %>
+            <% else %>
+              <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
+            <% end %>
+          </div>
         </div>
-      </div>
-      <div id="sidebar-left-inner">
-        <%= render 'refinery/admin/menu' %>
-      </div>
-      <%= link_to (t('.log_out', site_bar_translate_locale_args) + ' <i class="gcicon gcicon-log-out"></i>').html_safe,
-                  refinery.logout_path, :id => 'logout', :class => 'log-out' %>
-    </section>
+        <div id="sidebar-left-inner">
+          <%= render 'refinery/admin/menu' %>
+        </div>
+        <%= link_to (t('.log_out', site_bar_translate_locale_args) + ' <i class="gcicon gcicon-log-out"></i>').html_safe,
+                    refinery.logout_path, :id => 'logout', :class => 'log-out' %>
+      </section>
+    <% end %>
 
     <%= yield :body_top %>
 
@@ -77,14 +79,18 @@ html
     <% end %>
 
     <section id="wrapper" class="pusher">
-      <% if content_for?(:admin_sidebar) %>
-        <a href="" class="sidebar-right-opener menu-link menu-link-right"><i class="gcicon gcicon-publish"></i></a>
+      <% if !defined?(@hide_main_nav) || !@hide_main_nav %>
+        <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-bars"></i></a>
+        <% if content_for?(:admin_sidebar) %>
+          <a href="" class="sidebar-right-opener menu-link menu-link-right"><i class="gcicon gcicon-publish"></i></a>
+        <% end %>
       <% end %>
       <% if !current_refinery_user.has_role?(:superuser) %>
         <div id="flash_container" class="container-fluid">
           <div class="row">
             <div class="col-sm-12">
               <%= render '/refinery/no_script' %>
+              <%= render '/refinery/message' %>
             </div>
           </div>
         </div>
