--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -1,5 +1,7 @@
+<% editable = !page.skip_to_first_child %>
+
 <li id="<%= dom_id(page) -%>" class="page-listing">
-  <div class="page-row" role="tab" id="parent-1">
+  <div class="page-row <%= 'no-edit' unless editable %>" role="tab" id="parent-1">
     <% if page.children.present? %>
       <% if Refinery::Pages.auto_expand_admin_tree %>
         <a class="child-toggle" data-toggle="collapse" href="#<%= dom_id(page) -%>_children">
@@ -13,7 +15,8 @@
       <i class="status-icon gcicon gcicon-file"></i>
     <% end %>
   
-    <a href="<%= refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)) %>" class="page-title">
+    <% link_elem = editable ? 'a' : 'div' %>
+    <<%= link_elem %> href="<%= refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)) %>" class="page-title">
       <span class='title'>
         <%= page_title_with_translations page %>
         <%= page_meta_information page %>
@@ -36,7 +39,7 @@
       </span>
       -->
 
-    </a>
+    </<%= link_elem %>>
     
     <!-- ADDITIONAL ATTRIBUTE -->
     <!--
@@ -51,8 +54,9 @@
     </span>
     
     <span class='actions actions-col-2'>                 
-      <span class="add-child">           
-        <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe,
+      <span class="add-child">
+        <% add_subpage_txt = editable ? '' : 'Add Sub-Page' %>
+        <%= link_to "<i class=\"gcicon gcicon-add\"></i> #{add_subpage_txt}".html_safe,
                   refinery.new_admin_page_path(:parent_id => page.id),
                   :class => "circle-icon",
                   :title => t('new', :scope => 'refinery.admin.pages') %>
